--- a/templates/ofapp/index.html.twig
+++ b/templates/ofapp/index.html.twig
@@ -1,20 +1,59 @@
-{% extends 'base.html.twig' %}
 
-{% block title %}Hello OfappController!{% endblock %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>{% block title %}Welcome!{% endblock %}</title>
+        <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
+        {% block stylesheets %}{% endblock %}
+    </head>
+<body>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+                <a class="navbar-brand" href="{{path('ofapp')}}">OFAPP</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+                <div class="collapse navbar-collapse" id="navbarColor01">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Administrateur </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Aide</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                    </ul>               
+                </div>
+            </nav>
+            <div class="container">
+                <form>
+                    <fieldset>
+                        
+                        <div class="form-group">
+                        <label for="exampleInputEmail1">Login</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Votre Login ou Adresse email">
+                        
+                        </div>
+                        <div class="form-group">
+                        <label for="exampleInputPassword1">Mot de passe</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                        </div>
+                        <button type="button" class="btn btn-primary">Connexion</button>
+                    </fieldset>
+                </form> 
+        </div>       
+        {% block javascripts %}{% endblock %}
+    </body>
+</html>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/walid/ofapp/src/Controller/OfappController.php'|file_link(0) }}">src/Controller/OfappController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/walid/ofapp/templates/ofapp/index.html.twig'|file_link(0) }}">templates/ofapp/index.html.twig</a></code></li>
-    </ul>
-</div>
-{% endblock %}
+
+
+
+
