--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,40 +2,47 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <a class="navbar-brand" href="{{path('ofapp')}}">OFAPP</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarColor01">
-                <ul class="navbar-nav mr-auto">
-            
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Proprietaire </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Terrain</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Expertise</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Paiement</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Convention</a>
-                    </li>
-                </ul>                
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <a class="navbar-brand" href="{{path('ofapp')}}"><h3>STEG</h3></a>
+            <div class="row justify-content-sm-center">
+                
+                <div class="col-sm-12 offset-6">
+                     <h3 class="text-success">Societé Tunisienne de l'Electricité et du Gaz </h3>
+                </div>
+                
             </div>
-            </nav>
+            
+            
+             <div class="collapse navbar-collapse" id="navbarColor01">
+                <ul class="navbar-nav mr-auto"> 
+                </ul>   
+                    <div class="form-inline my-2 my-lg-0">
+                        
+                        <button class="btn btn-success my-2 my-sm-0" type="submit">S'inscrire</button>
+                    </div>             
+              </div>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Separated link</a>
+                        </div>
+                </li>
+        </nav>
+       
         <div class="container">
-             {% block body %}{% endblock %}
-        </div>      
-        {% block javascripts %}{% endblock %}
+            {% block body %}{% endblock %}
+            </div>
     </body>
 </html>
+    
+
+        
+             
