--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -1,12 +1,34 @@
 {% extends "base.html.twig" %}
-{% block body %}
-    <h1>Inscription sur le site</h1>
-    {{form_start(form)}}
-    {{form_row(form.username, {'label':'Nom d\'utilisateur','attr':{'placeholder':'Votre nom d\'utilisateur...'}})}}
-    {{form_row(form.email, {'label':'Adresse Email','attr':{'placeholder':'Votre Adresse email...'}})}}
-    {{form_row(form.password, {'label':'Mot de Passe','attr':{'placeholder':'Votre mot de passe'}})}}
-    {{form_row(form.confirm_password, {'label':'Confirmation','attr':{'placeholder':'Confirmer votre mot de passe ...'}})}}
 
-    <button type="submit" class="btn btn-success">Inscription</button>
-    {{form_end(form)}}
+
+{% block body %}
+    <div class="container">  
+        <div class="row justify-content-md-center">
+            <img src="/image/sigleSteg.png">
+        </div>
+        <div class="row justify-content-md-center">
+            {{ form_start(inscrit) }}
+                <div class="row">
+                    <div class="col-md-4">
+                        {{ form_row(inscrit.username,{'label': 'Utilisateur :' ,'attr':{'placeholder':'Walid...'}})}}
+                        {{ form_row(inscrit.email, {'label': 'Email :','attr':{'placeholder':'walidnagga@gmail.com...'}}) }}
+                        <div class="row justify-content-start">
+                        <div class="col-12">
+                            <button type="submit" class="btn btn-primary">S'inscrire</button>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="col-md-4">
+                        {{ form_row(inscrit.password,{'label':'Mot de passe :','attr':{'placeholder':'Mot de passe...'}}) }}
+                        {{ form_row(inscrit.confirm_password,{'label':'Mot de passe :','attr':{'placeholder':'Mot de passe...'}}) }}
+                    </div>   
+                    <br>
+                   
+                </div>
+             {{ form_end(inscrit) }}    
+        </div>                     
+           
+    </div>
+
 {% endblock %}
+
