utilisateur topograph dans la base de donnée

--- a/templates/ofapp/user/chef.html.twig
+++ b/templates/ofapp/user/chef.html.twig
@@ -4,11 +4,13 @@
         <table class="table table-hover">
           <thead>
             <tr class="table-warning">
-              <th scope="col">Type</th>
-              <th scope="col">Column heading</th>
-              <th scope="col">Column heading</th>
-              <th scope="col">Column heading</th>
-              <th scope="col">Column heading</th>
+              <th scope="col">ID</th>
+              <th scope="col">CIN</th>
+              <th scope="col">Prenom</th>
+              <th scope="col">Nom</th>
+              <th scope="col">Montant</th>
+              <th scope="col">Etat du Dossier</th>
+              <th scope="col">Détail</th>
             </tr>
           </thead>
           <tbody>
@@ -18,10 +20,9 @@
               <td>Column content</td>
               <td>Column content</td>
               <td>Column content</td>
-             
-              <td><button type="button" class="btn btn-info">Consulter</button>
-                  <button type="button" class="btn btn-success">Ordre de Paiement</button>
-                  <button type="button" class="btn btn-danger">Arréter</button></td>
+              <td>Column content</td>
+              <td>Column content</td>
+
             </tr>
             <tr class="table-dark">
               <th scope="row">Default</th>
@@ -29,10 +30,10 @@
               <td>Column content</td>
               <td>Column content</td>
               <td>Column content</td>
+              <td>Column content</td>
+              <td>Column content</td>
               
-              <td><button type="button" class="btn btn-info">Consulter</button>
-                  <button type="button" class="btn btn-success">Ordre de Paiement</button>
-                  <button type="button" class="btn btn-danger">Arréter</button></td>
+             
             </tr>
             <tr class="table-light">
               <th scope="row">Primary</th>
@@ -40,10 +41,10 @@
               <td>Column content</td>
               <td>Column content</td>
               <td>Column content</td>
+              <td>Column content</td>
+              <td>Column content</td>
              
-              <td><button type="button" class="btn btn-info">Consulter</button>
-                  <button type="button" class="btn btn-success">Ordre de Paiement</button>
-                  <button type="button" class="btn btn-danger">Arréter</button></td>
+             
             </tr>
             <tr class="table-dark">
               <th scope="row">Secondary</th>
@@ -51,10 +52,10 @@
               <td>Column content</td>
               <td>Column content</td>
               <td>Column content</td>
-        
-              <td><button type="button" class="btn btn-info">Consulter</button>
-                  <button type="button" class="btn btn-success">Ordre de Paiement</button>
-                  <button type="button" class="btn btn-danger">Arréter</button></td>
+              <td>Column content</td>
+              <td>Column content</td>
+
+              
             </tr>
             <tr class="table-light">
               <th scope="row">Success</th>
@@ -62,9 +63,9 @@
               <td>Column content</td>
               <td>Column content</td>
               <td>Column content</td>
-              <td><button type="button" class="btn btn-info">Consulter</button>
-                  <button type="button" class="btn btn-success">Ordre de Paiement</button>
-                  <button type="button" class="btn btn-danger">Arréter</button></td>
+              <td>Column content</td>
+              <td>Column content</td>
+              
             </tr>
             <tr class="table-dark">
               <th scope="row">Danger</th>
@@ -72,9 +73,9 @@
               <td>Column content</td>
               <td>Column content</td>
               <td>Column content</td>
-              <td><button type="button" class="btn btn-info">Consulter</button>
-                  <button type="button" class="btn btn-success">Ordre de Paiement</button>
-                  <button type="button" class="btn btn-danger">Arréter</button></td>
+              <td>Column content</td>
+              <td>Column content</td>
+              
             </tr>
             <tr class="table-light">
               <th scope="row">Warning</th>
@@ -82,9 +83,9 @@
               <td>Column content</td>
               <td>Column content</td>
               <td>Column content</td>
-              <td><button type="button" class="btn btn-info">Consulter</button>
-                  <button type="button" class="btn btn-success">Ordre de Paiement</button>
-                  <button type="button" class="btn btn-danger">Arréter</button></td>
+              <td>Column content</td>
+              <td>Column content</td>
+              
             </tr>
           </tbody>
         </table> 
