--- a/templates/ofapp/user/expert.html.twig
+++ b/templates/ofapp/user/expert.html.twig
@@ -1,14 +1,16 @@
 {% extends "base.html.twig" %}
-{% block title %}Expert{% endblock %}
-{% block body %}     
-<table class="table table-hover">
+{% block title %}Chef de Projet{% endblock %}
+{% block body %}
+        <table class="table table-hover">
           <thead>
             <tr class="table-warning">
-              <th scope="col">Type</th>
-              <th scope="col">Column heading</th>
-              <th scope="col">Column heading</th>
-              <th scope="col">Column heading</th>
-              <th scope="col">Column heading</th>
+              <th scope="col">ID</th>
+              <th scope="col">CIN</th>
+              <th scope="col">Prenom</th>
+              <th scope="col">Nom</th>
+              <th scope="col">Montant</th>
+              <th scope="col">Etat du Dossier</th>
+              <th scope="col">Détail</th>
             </tr>
           </thead>
           <tbody>
@@ -17,40 +19,43 @@
               <td>Column content</td>
               <td>Column content</td>
               <td>Column content</td>
-              <td>Column content</td>             
-              <td><button type="button" class="btn btn-info">Consulter</button>
-                  <button type="button" class="btn btn-success">Payer</button>
-                  <button type="button" class="btn btn-danger">Annuler</button></td>
+              <td>Column content</td>
+              <td>Column content</td>
+              <td>Column content</td>
+
             </tr>
             <tr class="table-dark">
               <th scope="row">Default</th>
               <td>Column content</td>
               <td>Column content</td>
               <td>Column content</td>
-              <td>Column content</td>             
-              <td><button type="button" class="btn btn-info">Consulter</button>
-                  <button type="button" class="btn btn-success">Payer</button>
-                  <button type="button" class="btn btn-danger">Annuler</button></td>
+              <td>Column content</td>
+              <td>Column content</td>
+              <td>Column content</td>
+              
+             
             </tr>
             <tr class="table-light">
               <th scope="row">Primary</th>
               <td>Column content</td>
               <td>Column content</td>
               <td>Column content</td>
-              <td>Column content</td>             
-              <td><button type="button" class="btn btn-info">Consulter</button>
-                  <button type="button" class="btn btn-success">Payer</button>
-                  <button type="button" class="btn btn-danger">Annuler</button></td>
+              <td>Column content</td>
+              <td>Column content</td>
+              <td>Column content</td>
+             
+             
             </tr>
             <tr class="table-dark">
               <th scope="row">Secondary</th>
               <td>Column content</td>
               <td>Column content</td>
               <td>Column content</td>
-              <td>Column content</td>        
-              <td><button type="button" class="btn btn-info">Consulter</button>
-                  <button type="button" class="btn btn-success">Payer</button>
-                  <button type="button" class="btn btn-danger">Annuler</button></td>
+              <td>Column content</td>
+              <td>Column content</td>
+              <td>Column content</td>
+
+              
             </tr>
             <tr class="table-light">
               <th scope="row">Success</th>
@@ -58,9 +63,9 @@
               <td>Column content</td>
               <td>Column content</td>
               <td>Column content</td>
-              <td><button type="button" class="btn btn-info">Consulter</button>
-                  <button type="button" class="btn btn-success">Payer</button>
-                  <button type="button" class="btn btn-danger">Annuler</button></td>
+              <td>Column content</td>
+              <td>Column content</td>
+              
             </tr>
             <tr class="table-dark">
               <th scope="row">Danger</th>
@@ -68,9 +73,9 @@
               <td>Column content</td>
               <td>Column content</td>
               <td>Column content</td>
-              <td><button type="button" class="btn btn-info">Consulter</button>
-                  <button type="button" class="btn btn-success">Payer</button>
-                  <button type="button" class="btn btn-danger">Annuler</button></td>
+              <td>Column content</td>
+              <td>Column content</td>
+              
             </tr>
             <tr class="table-light">
               <th scope="row">Warning</th>
@@ -78,9 +83,9 @@
               <td>Column content</td>
               <td>Column content</td>
               <td>Column content</td>
-              <td><button type="button" class="btn btn-info">Consulter</button>
-                  <button type="button" class="btn btn-success">Payer</button>
-                  <button type="button" class="btn btn-danger">Annuler</button></td>
+              <td>Column content</td>
+              <td>Column content</td>
+              
             </tr>
           </tbody>
         </table> 
@@ -109,4 +114,5 @@
                 </li>
               </ul>
             </div>
+    
 {% endblock %}
