--- a/templates/ofapp/user/servPaie.html.twig
+++ b/templates/ofapp/user/servPaie.html.twig
@@ -1,16 +1,16 @@
 {% extends "base.html.twig" %}
-{% block title %}Service Paiement{% endblock %}
+{% block title %}Chef de Projet{% endblock %}
 {% block body %}
-    
-      
-<table class="table table-hover">
+        <table class="table table-hover">
           <thead>
             <tr class="table-warning">
-              <th scope="col">Type</th>
-              <th scope="col">Column heading</th>
-              <th scope="col">Column heading</th>
-              <th scope="col">Column heading</th>
-              <th scope="col">Column heading</th>
+              <th scope="col">ID</th>
+              <th scope="col">CIN</th>
+              <th scope="col">Prenom</th>
+              <th scope="col">Nom</th>
+              <th scope="col">Montant</th>
+              <th scope="col">Etat du Dossier</th>
+              <th scope="col">Détail</th>
             </tr>
           </thead>
           <tbody>
@@ -20,10 +20,9 @@
               <td>Column content</td>
               <td>Column content</td>
               <td>Column content</td>
-             
-              <td><button type="button" class="btn btn-info">Consulter</button>
-                  <button type="button" class="btn btn-success">Payer</button>
-                  <button type="button" class="btn btn-danger">Annuler</button></td>
+              <td>Column content</td>
+              <td>Column content</td>
+
             </tr>
             <tr class="table-dark">
               <th scope="row">Default</th>
@@ -31,10 +30,10 @@
               <td>Column content</td>
               <td>Column content</td>
               <td>Column content</td>
+              <td>Column content</td>
+              <td>Column content</td>
               
-              <td><button type="button" class="btn btn-info">Consulter</button>
-                  <button type="button" class="btn btn-success">Payer</button>
-                  <button type="button" class="btn btn-danger">Annuler</button></td>
+             
             </tr>
             <tr class="table-light">
               <th scope="row">Primary</th>
@@ -42,10 +41,10 @@
               <td>Column content</td>
               <td>Column content</td>
               <td>Column content</td>
+              <td>Column content</td>
+              <td>Column content</td>
              
-              <td><button type="button" class="btn btn-info">Consulter</button>
-                  <button type="button" class="btn btn-success">Payer</button>
-                  <button type="button" class="btn btn-danger">Annuler</button></td>
+             
             </tr>
             <tr class="table-dark">
               <th scope="row">Secondary</th>
@@ -53,10 +52,10 @@
               <td>Column content</td>
               <td>Column content</td>
               <td>Column content</td>
-        
-              <td><button type="button" class="btn btn-info">Consulter</button>
-                  <button type="button" class="btn btn-success">Payer</button>
-                  <button type="button" class="btn btn-danger">Annuler</button></td>
+              <td>Column content</td>
+              <td>Column content</td>
+
+              
             </tr>
             <tr class="table-light">
               <th scope="row">Success</th>
@@ -64,9 +63,9 @@
               <td>Column content</td>
               <td>Column content</td>
               <td>Column content</td>
-              <td><button type="button" class="btn btn-info">Consulter</button>
-                  <button type="button" class="btn btn-success">Payer</button>
-                  <button type="button" class="btn btn-danger">Annuler</button></td>
+              <td>Column content</td>
+              <td>Column content</td>
+              
             </tr>
             <tr class="table-dark">
               <th scope="row">Danger</th>
@@ -74,9 +73,9 @@
               <td>Column content</td>
               <td>Column content</td>
               <td>Column content</td>
-              <td><button type="button" class="btn btn-info">Consulter</button>
-                  <button type="button" class="btn btn-success">Payer</button>
-                  <button type="button" class="btn btn-danger">Annuler</button></td>
+              <td>Column content</td>
+              <td>Column content</td>
+              
             </tr>
             <tr class="table-light">
               <th scope="row">Warning</th>
@@ -84,9 +83,9 @@
               <td>Column content</td>
               <td>Column content</td>
               <td>Column content</td>
-              <td><button type="button" class="btn btn-info">Consulter</button>
-                  <button type="button" class="btn btn-success">Payer</button>
-                  <button type="button" class="btn btn-danger">Annuler</button></td>
+              <td>Column content</td>
+              <td>Column content</td>
+              
             </tr>
           </tbody>
         </table> 
@@ -115,4 +114,5 @@
                 </li>
               </ul>
             </div>
+    
 {% endblock %}
