--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
+{#         <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
+ #}        
+        <link href="{{ asset('css/bootstrap.min.css') }}"
+        type="text/css " rel="stylesheet">
         {% block stylesheets %}{% endblock %}
     </head>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -14,11 +17,11 @@
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="{{path('security_login')}}">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="{{path('app_login')}}">Home <span class="sr-only">(current)</span></a>
                     </li>
                     {% if app.user %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{path('security_login')}}">déconnexion</a>
+                        <a class="nav-link" href="{{path('app_login')}}">déconnexion</a>
                     </li>
                     {% endif %}
 
