--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -1,33 +1,28 @@
-{% extends "base.html.twig" %}
+{% extends 'base.html.twig' %}
 
+{% block title %}page d'enregistrement{% endblock %}
 
 {% block body %}
-    <div class="container">  
+    <form method="post">
+        
+
         <div class="row justify-content-md-center">
             <img src="/image/sigleSteg.png">
         </div>
         <div class="row justify-content-md-center">
-            {{ form_start(form) }}
-                <div class="row">
-                    <div class="col-md-4">
-                        {{ form_row(form.username,{'label': 'Utilisateur :' ,'attr':{'placeholder':'Walid...'}})}}
-                        {{ form_row(form.email, {'label': 'Email :','attr':{'placeholder':'walidnagga@gmail.com...'}}) }}
-                        <div class="row justify-content-start">
-                        <div class="col-12">
-                            <button type="submit" class="btn btn-primary">S'inscrire</button>
-                        </div>
-                    </div>
-                    </div>
-                    <div class="col-md-4">
-                        {{ form_row(form.password,{'label':'Mot de passe :','attr':{'placeholder':'Mot de passe...'}}) }}
-                        {{ form_row(form.confirm_password,{'label':'Confirmer :','attr':{'placeholder':'retapper le mot de passe...'}}) }}
-                    </div>   
-                    <br>                   
+            <div class="row">
+                <div class="col-sm-8">
+            
+                    {{ form_start(form) }}
+                    {{ form_row(form.username, {'label':'Utilisateur :', 'attr': {'placeholder':'utilisateur'}}) }}
+                    {{ form_row(form.email, {'label':'Email :', 'attr': {'placeholder':'adresse email'}}) }}
+                    {{ form_row(form.password, {'label':'Mot de passe :', 'attr': {'placeholder':'mot de passe'}}) }}
+                    {{ form_row(form.confirm_password, {'label':'Confirmer :', 'attr': {'placeholder':'retaper le mot de passe'}}) }}
+                    <button type="submit" class="btn btn-primary">inscription</button>
+                    {{ form_end(form) }}
+                     
                 </div>
-             {{ form_end(form) }}    
-        </div>                     
-           
-    </div>
-
+            </div>
+        </div>
+    </form>
 {% endblock %}
-
