--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,42 +1,67 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
-        <meta charset="UTF-8">
-{#         <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
- #}        
-        <link href="{{ asset('css/bootstrap.min.css') }}"
-        type="text/css " rel="stylesheet">
-        {% block stylesheets %}{% endblock %}
+        <title>{% block title %}Bar de navigation{% endblock %}</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        {% block stylesheets %}
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+            <link rel="stylesheet" href="{{ asset('css/font-awesome.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
+        {% endblock %}
     </head>
+    <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <a class="navbar-brand" href="#">STEG</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+            <a style="margin-left: 75px; color: #c63415;" class="navbar-brand space-brand" href="{{ path('app_homepage') }}">STEG</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarColor01">
+             </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{{path('app_login')}}">Home <span class="sr-only">(current)</span></a>
+                     <li class="nav-item">
+                       <a style="color: #c63415;" class="nav-link" href="#">Home</a>
+                     </li>
+                     <li class="nav-item">
+                       <a style="color: #c63415;" class="nav-link" href="#">Déconnexion</a>
+                     </li>
+                   </ul>
+                
+                <ul class="navbar-nav ml-auto">
+                   
+                    
+                    <li class="nav-item dropdown" style="margin-right: 75px;">
+                        <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          <img class="nav-profile-img rounded-circle" src="{{ asset('images/astronaut-profile.png') }}">
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="#">Profile</a>
+                            <a class="dropdown-item" href="#">Create Post</a>
+                            <a class="dropdown-item" href="#">Logout</a>
+                        </div>
                     </li>
-                    {% if app.user %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{path('app_login')}}">déconnexion</a>
-                    </li>
-                    {% endif %}
-
+                    
                 </ul>
             </div>
         </nav>
-    
-       
-        <div class="container">
-            {% block body %}{% endblock %}
+        {% block body %}{% endblock %}
+        <footer class="footer">
+            <div class="container text-center">
+                <span class="text-muted">Construite à l'  
+                <a href="http://www.isetsf.rnu.tn/">ISET de Sfax</a></span>
+                <i class="fa fa-heart" style="color: red;"></i> Pour l'interet de la 
+                <a href="https://www.steg.com.tn">STEG</a></span>
             </div>
-            
+        </footer>
+        {% block javascripts %}
+            <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+            <script>
+                $('.dropdown-toggle').dropdown();
+            </script>
+        {% endblock %}
     </body>
 </html>
-    
     
 
         
