--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,5 +1,5 @@
 {% extends "base.html.twig" %}
 {% block title %} Page d'acceuil{% endblock %}
 {% block body %}
-<h1> Ma page d'acceuil</h1>
+<h1> Page de profil</h1>
 {% endblock %}
